# SuperDerpy

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  Makefile  README  README.md  REFACTORING  SuperDerpy.files  SuperDerpy.includes  SuperDerpy.sh  TODO  about.c  about.h  build  cmake_uninstall.cmake.in  intro.c  loading.c  loading.h  main.c  main.h  make  map.c  map.h  menu.c  menu.h  run
cmake/: FindAllegro5.cmake  FindAllegro5ACodec.cmake  FindAllegro5Font.cmake  FindAllegro5Main.cmake  FindAllegro5Primitives.cmake  SetPaths.cmake
data/: CMakeLists.txt  click.flac  derpcycle2.xcf  dosowisko.flac  kbd.flac  key.flac  keyboard.flac  moonwalk.flac  superderpy.desktop
data/icons/: CMakeLists.txt  icon.rc
data/intro/: 1.flac  2.flac  3.flac  4.flac  5.flac
data/levels/1/: letter.flac
data/levels/3/: music.flac
data/levels/derpy/: fly.ini  run.ini  stand.ini  walk.ini
data/menu/: click.flac  menu.flac
data/src/: menu.xcf
data/voice/: Fluttershy-01.flac  Fluttershy-02.flac  Fluttershy-03.flac  Fluttershy-04.flac  Fluttershy-05.flac  Fluttershy-06.flac  Fluttershy-07.flac  Fluttershy-08.flac  Fluttershy-09.flac
doc/: doxygen_sqlite3.db
doc/html/: about_8c.html  about_8h.html  about_8h_source.html  actions_8c.html  actions_8h.html  actions_8h_source.html  allegro__utils_8c.html  allegro__utils_8h.html  allegro__utils_8h_source.html  annotated.html  callbacks_8c.html  callbacks_8h.html  callbacks_8h_source.html  classes.html  config_8c.html  config_8h.html  config_8h_source.html  dir_2da33b8aa18c8d65a4e12ee20227e046.html  dir_318f348d77685d5f6aacd276084776b8.html  dir_410b3d52a56c168286da461d27d88774.html  dir_4989de145ff53abce397f1ec189271fe.html  dir_4ff4f6bebc32dbfd42a94291be3d242d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7e2a362cc68fdecf5515353835dcb4de.html  dir_8a0a995e6ee4f5855421eab93f2d2c6a.html  dir_8a932d837bc095e8ae16508a04c7ef42.html  dir_949cb96c9a5c940af224cb3a69d79081.html  dir_b87e88cae048810ef48556986623cdd7.html  dir_e78f8101111290c0a975c91bad01fb6f.html  dir_ef2042f323ed03e66fd65ec968fc03ac.html  disclaimer_8c.html  disclaimer_8h.html  disclaimer_8h_source.html  dodger_2actions_8h_source.html  dodger_8c.html  dodger_8h.html  dodger_8h_source.html  dosowisko_8c.html  dosowisko_8h.html  dosowisko_8h_source.html  (+126 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  (+104 more)
doc/latex/: about_8c.tex  about_8h.tex  actions_8c.tex  actions_8h.tex  allegro__utils_8c.tex  allegro__utils_8h.tex  annotated.tex  callbacks_8c.tex  callbacks_8h.tex  config_8c.tex  config_8h.tex  dir_2da33b8aa18c8d65a4e12ee20227e046.tex  dir_318f348d77685d5f6aacd276084776b8.tex  dir_410b3d52a56c168286da461d27d88774.tex  dir_4989de145ff53abce397f1ec189271fe.tex  dir_4ff4f6bebc32dbfd42a94291be3d242d.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7e2a362cc68fdecf5515353835dcb4de.tex  dir_8a0a995e6ee4f5855421eab93f2d2c6a.tex  dir_8a932d837bc095e8ae16508a04c7ef42.tex  dir_949cb96c9a5c940af224cb3a69d79081.tex  dir_b87e88cae048810ef48556986623cdd7.tex  dir_e78f8101111290c0a975c91bad01fb6f.tex  dir_ef2042f323ed03e66fd65ec968fc03ac.tex  disclaimer_8c.tex  disclaimer_8h.tex  dodger_8c.tex  dodger_8h.tex  dosowisko_8c.tex  dosowisko_8h.tex  doxygen.sty  files.tex  gamestate_8c.tex  gamestate_8h.tex  intro_8c.tex  intro_8h.tex  level1_8c.tex  level1_8h.tex  level2_8c.tex  level2_8h.tex  (+61 more)
lib/: .gitignore  CMakeLists.txt  README.txt
modules/: FindAllegro5.cmake  FindAllegro5ACodec.cmake  FindAllegro5Audio.cmake  FindAllegro5Font.cmake  FindAllegro5Image.cmake  FindAllegro5Main.cmake  FindAllegro5NativeDialogs.cmake  FindAllegro5Primitives.cmake  FindAllegro5TTF.cmake
src/: CMakeLists.txt  about.c  about.h  allegro_utils.c  allegro_utils.h  config.c  config.h  disclaimer.c  disclaimer.h  gamestate.c  gamestate.h  intro.c  intro.h  level.c  level.h  loading.c  loading.h  main.c  main.h  map.c  map.h  menu.c  menu.h  moonwalk.c  moonwalk.h  pause.c  pause.h  timeline.c  timeline.h  utils.c  utils.h
src/data/: Derpy_Fly.swf  Derpy_Run.swf  Derpy_Trot.swf  Derpy_Walk.swf  derpcycle.xcf  drawings.xcf  map.xcf  runcycle.xcf  s4d.ai  s4d2.ai  table.xcf  zombie.xcf
src/gamestates/: CMakeLists.txt  about.c  about.h  disclaimer.c  disclaimer.h  dosowisko.c  dosowisko.h  intro.c  intro.h  level.c  level.h  loading.c  loading.h  map.c  map.h  menu.c  menu.h  pause.c  pause.h
src/levels/: CMakeLists.txt  actions.c  actions.h  callbacks.c  callbacks.h  dodger.c  dodger.h  level1.c  level1.h  level2.c  level2.h  level3.c  level3.h  level4.c  level4.h  level5.c  level5.h  level6.c  level6.h  level_placeholder.c  moonwalk.c  moonwalk.h
src/levels/dodger/: actions.c  actions.h  callbacks.h
src/levels/modules/: dodger.c  dodger.h  moonwalk.c  moonwalk.h
src/levels/modules/dodger/: actions.c  actions.h  callbacks.c  callbacks.h
