add_subdirectory(icons)
install(FILES superderpy.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
install(DIRECTORY about DESTINATION ${SHARE_INSTALL_PREFIX}/superderpy/data)
install(DIRECTORY intro DESTINATION ${SHARE_INSTALL_PREFIX}/superderpy/data)
install(DIRECTORY levels DESTINATION ${SHARE_INSTALL_PREFIX}/superderpy/data)
install(DIRECTORY map DESTINATION ${SHARE_INSTALL_PREFIX}/superderpy/data)
install(DIRECTORY menu DESTINATION ${SHARE_INSTALL_PREFIX}/superderpy/data)
install(DIRECTORY voice DESTINATION ${SHARE_INSTALL_PREFIX}/superderpy/data)
install(DIRECTORY fonts DESTINATION ${SHARE_INSTALL_PREFIX}/superderpy/data)
install(FILES loading.png DESTINATION ${SHARE_INSTALL_PREFIX}/superderpy/data)
install(FILES table.png DESTINATION ${SHARE_INSTALL_PREFIX}/superderpy/data)
