IF(MINGW)
 IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/win32" AND IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/win32")
  FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/win32/*.dll")
  INSTALL(FILES ${files} DESTINATION ${BIN_INSTALL_DIR})
 ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/win32" AND IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/win32")
ENDIF(MINGW)

# TODO: handle libraries in Linux and Mac OS X versions
